--- a/Collaborator/OwlEyes/Solution(s)/WWW/WWW/Web.config
+++ b/Collaborator/OwlEyes/Solution(s)/WWW/WWW/Web.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <clear/>
-    <add name="DB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Virtual-World-Systems\WWW\App_Data\Database.mdf;Integrated Security=True;Connect Timeout=30"/>
+    <add name="DB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\github\Virtual-World-Systems\Development\Collaborator\OwlEyes\Solution(s)\WWW\WWW\App_Data\Database.mdf;Integrated Security=True;Connect Timeout=30"/>
   </connectionStrings>
   <system.web>
     <customErrors mode="Off"/>
