--- a/Collaborator/OwlEyes/Solution(s)/OpenSimulator/OpenSimulator/OpenSimulator.csproj
+++ b/Collaborator/OwlEyes/Solution(s)/OpenSimulator/OpenSimulator/OpenSimulator.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -134,6 +135,8 @@
     <Content Include="Objects\_.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\Image1.png" />
+    <None Include="Resources\call_icon_24x24.png" />
     <Content Include="SpecialFolders.txt" />
     <Content Include="_.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
