--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@
 
 /Collaborator/OwlEyes/Solution(s)/WWW/WWW/App_Data/Database.mdf
 /Collaborator/OwlEyes/Solution(s)/WWW/WWW/App_Data/Database_log.ldf
-/Collaborator/OwlEyes/Solution(s)/OpenSimulator/.vs/OpenSimulator/v17/.suo
+/Collaborator/OwlEyes/Solution(s)/OpenSimulator/.vs/
