--- a/Collaborator/OwlEyes/Solution(s)/Virtual World Systems/Windows Desktop/Virtual World Systems (Windows Desktop).csproj
+++ b/Collaborator/OwlEyes/Solution(s)/Virtual World Systems/Windows Desktop/Virtual World Systems (Windows Desktop).csproj
@@ -115,6 +115,7 @@
     <Compile Include="TestForm.SplitContainer.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="XML\Attribute.cs" />
     <Compile Include="XML\Document.cs" />
     <Compile Include="XML\Element.cs" />
     <EmbeddedResource Include="Controls\Container\TreeList.resx">
