--- a/Collaborator/OwlEyes/Solution(s)/Virtual World Systems/Windows Desktop/Virtual World Systems (Windows Desktop).csproj
+++ b/Collaborator/OwlEyes/Solution(s)/Virtual World Systems/Windows Desktop/Virtual World Systems (Windows Desktop).csproj
@@ -205,6 +205,7 @@
     <Compile Include="misc\M55.cs" />
     <Compile Include="misc\M33.cs" />
     <Compile Include="misc\Rect.cs" />
+    <Compile Include="Program_old.cs" />
     <Compile Include="System\IO\HTTPMessage.cs" />
     <Compile Include="System\IO\TCPConnection.cs" />
     <Compile Include="System\IO\TCPListener.cs" />
@@ -290,6 +291,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Interceptor\_InterceptorTabPage.resx">
       <DependentUpon>_InterceptorTabPage.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Interceptor\ScrollableInterceptor.resx">
       <DependentUpon>ScrollableInterceptor.cs</DependentUpon>
@@ -329,6 +331,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
